# a2a-orchestrator

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  mkdocs.yml  pyproject.toml  ruff.toml
.github/workflows/: deploy-talos.yml  mkdocs-deploy.yml
docker/shell/: Dockerfile
docs/: curl-examples.md  index.md
docs/agents/: orchestrator.md  overview.md  recipe-gen.md  recipe-url.md  shell.md
docs/api/: a2a.md  curl-examples.md  openai-compat.md  openapi.md
docs/architecture/: a2a-protocol.md  discovery.md  history.md  orchestration-loop.md  overview.md  rate-limiting.md  streaming.md
docs/css/: custom.css
docs/deployment/: docker.md  kubernetes.md  local.md
docs/development/: contributing.md  layout.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/openapi/: a2a-protocol.openapi.json  orchestrator.openapi.json  recipe-gen.openapi.json  recipe-url.openapi.json  shell.openapi.json
k8s/: README.md  deployment-orchestrator.yaml  deployment-recipe-gen.yaml  deployment-recipe-url.yaml  ingressroute.yaml  kustomization.yaml  middleware-ratelimit.yaml  namespace.yaml  secret.example.yaml
k8s/cluster-setup/: README.md  rbac.yaml  runner.yaml
scripts/: build_shell_image.sh  generate_openapi.py  run_all.sh  verify-deployment.py
tests/: conftest.py
tests/common/: test_a2a_helpers.py  test_claude.py  test_logging.py  test_persistence.py  test_recipe.py
tests/orchestrator/: test_executor.py  test_openai_compat.py  test_planner.py  test_ratelimit.py
tests/recipe_gen/: test_executor.py
(+26 files in other folders)
